# llm-zoomcamp

./: Makefile  assistant.py  db_query.py  hw1.ipynb  judge.py  pyproject.toml
llm-zoomcamp-hw2/: hw2.ipynb  pyproject.toml
